# client-web

./: .env.example  .gitignore  Caddyfile  Caddyfile.proxy  README.md  docker-compose.yml
api/: Dockerfile  pyproject.toml
api/speechmux_api/: __init__.py  auth.py  config.py  main.py  ws_proxy.py
web/: Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/engines/: route.ts
web/components/: AudioCapture.tsx  BatchPanel.tsx  StatusBar.tsx  TranscriptView.tsx
web/lib/: audio-utils.ts  engine-options.ts  speechmux-ws.ts
web/public/: pcm-processor.js
